--- a/27-Debdas-Romanticism-and-Sex-Workers-by-Rahul-Ray.Rmd
+++ b/27-Debdas-Romanticism-and-Sex-Workers-by-Rahul-Ray.Rmd
@@ -3,17 +3,26 @@
 
 First Nishi-Padma in Bengali was released in 1970, and then came Amar Prem in Hindi in 1972.  Both movies, based on a short story, Hinger Kachuri by Bibhutibhusan Bandopadhyay were instant sensations.   Uttam Kumar, the veteran Bengali matinee idol was flawless as a Bangalee babu rejoining his childhood love Pushpa, who had taken up the world’s oldest profession due to failing family circumstances.  In the Hindi version Rajesh Khanna, with his flawless and chiseled face donning a charming smile stole the heart of every cinema-goer who saw the movie.  But, the real show-stoppers were the songs in both movies.  Manna De received a national award for the song ‘Jaa khushi ora bolay boluk’.  I saw Amar Prem when I was a mere adolescent.  But closing my eyes I still can see Rajesh Khanna, in a drunken stupor singing ‘Kuch tow log kohenge’.  Even today, when these kinds of movies are no longer in vogue and considered soggy by most discriminating movie-goers, both songs are sure to drench their hearts and minds with sadness.  Yet there will be a palpable sense of romanticism. 
 
-Image of Amar Prem
+```{r echo=FALSE, out.width = '50%', out.height="50%", fig.cap="Amar Prem"}
+knitr::include_graphics("images/Rahul_Amar_Prem.png")
+```
+
 Debdas, by Sarat Chandra Chattopadhyay is another such classic.  This novel, again about a well-to-do man falling in love with a prostitute has been made and re-made in movies in several Indian languages.  Last year I was in a literary conference in a suburb of Boston where a non-Bengali speaking person spoke in glowing terms about this novel.  His voice trembled in emotion, his eyes welled-up in tears.  Such is the draw of the story in this novel!  Actually, numerous stories, novels have been written, scores of movies have been made on this theme – the storyline is almost inevitably the same – a boy and a girl, childhood lovers get separated by twist of events.  The boy becomes a man when he finds his old flame raped by a relative had become a prostitute.  The man would almost inevitably belong to a very well-to-do family, and in particular with movies he should have a fine taste for music.  This has been a staple for Indian readers and movie-goers, particularly the latter for generations.
  However, a gritty and down-to-earth treatment of these women has also evolved, although with significantly less frequency.  In the early 1940s, during the infamous ‘famine of Bengal’ millions of people lost their livelihood and innumerable families were shattered.  Villages were drained of people who poured into big cities like Kolkata begging for food, and ultimately died like flies in streets and back alley of the city.  A similar situation arose after the independence of India in 1947 that resulted in the partition of Bengal.   People, after losing everything they possessed in the then East Bengal streamed into Kolkata for shelter and livelihood.  In both occasions there were no jobs in the city to provide for families that survived the famine or partition.  Thus, it became a question of survival by any means.  
 Under such dire conditions when men in the family could not provide food and shelter for their families many women took up prostitution as a mean to provide for their families.  Plight of these women have been depicted in many literary works of that period.  In the celluloid medium, Satyajit Ray portrayed the predicament of Chhutki, one such girl in a famine-stricken village in his movie depiction of Ashani Sanket by Bibhutibhusan Bandopadhyay.   
 
-Image of Ashani Sanket
+```{r echo=FALSE, out.width = '50%', out.height="50%", fig.cap="Asani Sanket"}
+knitr::include_graphics("images/Rahul_S_Ray.png")
+```
+
 On the other hand, Ritwik Ghatak sketched the character of Sita, a victim of post-partitioned Bengal who turned to prostitution in his epic film, Subarnarekha.  In all these novels and films sympathy for these out of luck women is palpable.  But, in stark contrast, the Indian society in general has been outright hostile towards these hapless females.  The general feeling is, it is OK to have fun with them, but it is absolutely out of question to bring them into normal family surroundings and give them a decent life.
 
 Throughout the nineteenth till early twentieth century it was a common customary among the wealthy Bengali Babus in Kolkata to ‘keep’ multiple concubines, in addition to their legally married wives.  But, none of those women, dubbed ‘Baranganas’ were ever given a chance to have a normal life of a woman.  The life of Binodini Dasi, commonly known as Nati Binodini, the famous actress and consort of Girish Chandra Ghosh, the most famous Bengali theater personality of the twentieth century is a typical case about the treatment of ‘women in the outskirts of the society’.  It should come as no surprise that Nati Binodini, despite her unwavering devotion for Girish Ghosh was ultimately ‘sold’ to a merchant in the name of establishing Bengal Theater Company.     
 
-Image of Devdas
+```{r echo=FALSE, out.width = '50%', out.height="50%", fig.cap="Debdas"}
+knitr::include_graphics("images/Rahul_Debdas.png")
+```
+
 The women’s rights groups in India have long advocated against the mistreatment of these women, but the double-standard has continued.  Even today these women, who are often victims of rape and incest cannot return to normal family life due to strict moral codes imposed on them by male-dominant Indian society.  But, strangely enough movie-making about prostitutes and romanticism continues.  The last movie-version of Debdas (Devdas) was made in the year 2002 with the biggest stars of Bollywood including Shah Rukh Khan, Madhuri Dixit and Aisharya Rai.  It instantly became a national and international super-hit and one of the top-grossing Indian movies ever made!   Then there are scores of others on the same theme, like Umrao Jaan, Pakeezah, Dev D etc.  
 
 Recently attempts have been made to ‘de-romanticize prostitution’ by categorizing these out-of-luck women as ‘sex workers’.  It was felt that the idea of calling these women ‘workers’ in a trade may have dual effects of reducing social stigma as well as recognizing prostitution as a profession, much like any other job.  Such categorization may even give them access to benefits common to other trades such as paid leave, health care, collective bargaining etc.  It is appropriate to say that these expectations have largely remained unfulfilled.  But such a scenario can potentially change.
